[gd_scene load_steps=25 format=3 uid="uid://bm732gadxy1et"]

[ext_resource type="Script" path="res://Characters/dummy/dummy_character_body_2d.gd" id="1_7bhiu"]
[ext_resource type="Texture2D" uid="uid://c50d337osrln4" path="res://Characters/dummy/Hited1.png" id="1_lcmt8"]
[ext_resource type="Texture2D" uid="uid://d350rqpkpjmgf" path="res://Characters/dummy/Hited2.png" id="2_xuo4b"]
[ext_resource type="Texture2D" uid="uid://cs4obwr84v0us" path="res://Characters/dummy/Hited3.png" id="3_jsj1k"]
[ext_resource type="Texture2D" uid="uid://bb05js0g8ysmv" path="res://Characters/dummy/Hited4.png" id="4_r2xij"]
[ext_resource type="Texture2D" uid="uid://cgufsu60ahabt" path="res://Characters/dummy/Hited5.png" id="5_7xv3y"]
[ext_resource type="Script" path="res://utility/state_machine.gd" id="6_qopg8"]
[ext_resource type="PackedScene" uid="uid://c1jrg0r6vw1pv" path="res://utility/hurt_box.tscn" id="7_gvkan"]
[ext_resource type="Script" path="res://Characters/dummy/idle.gd" id="8_a1bc8"]
[ext_resource type="Script" path="res://Characters/dummy/hurt.gd" id="9_b3bjo"]
[ext_resource type="Script" path="res://Characters/dummy/freeze.gd" id="10_6lman"]
[ext_resource type="Script" path="res://Characters/dummy/death.gd" id="11_44wub"]
[ext_resource type="Texture2D" uid="uid://b6x2sa0qrnulc" path="res://utility/NoteSlotsControl/Noteslot.png" id="13_nkif6"]
[ext_resource type="Texture2D" uid="uid://chs8ibt06rinv" path="res://assets/characters/do.png" id="14_if0mq"]
[ext_resource type="Script" path="res://utility/solfege_ball.gd" id="15_ehgvh"]
[ext_resource type="Texture2D" uid="uid://cm208n8affa81" path="res://assets/characters/re.png" id="16_oiv8w"]
[ext_resource type="Texture2D" uid="uid://0t1ixaxovtnc" path="res://assets/characters/mi.png" id="17_n1vx5"]
[ext_resource type="Texture2D" uid="uid://cuhu63pmhxyr4" path="res://assets/characters/fa.png" id="18_35kb5"]
[ext_resource type="Texture2D" uid="uid://dmfoupxsxgjfn" path="res://assets/characters/so.png" id="19_i43lu"]
[ext_resource type="Texture2D" uid="uid://bjvfxwyag5jg7" path="res://assets/characters/la.png" id="20_tmxob"]
[ext_resource type="Texture2D" uid="uid://cymlinrljycyu" path="res://assets/characters/ti.png" id="21_hajjm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pdow8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lcmt8")
}, {
"duration": 1.0,
"texture": ExtResource("2_xuo4b")
}, {
"duration": 1.0,
"texture": ExtResource("3_jsj1k")
}, {
"duration": 1.0,
"texture": ExtResource("4_r2xij")
}, {
"duration": 1.0,
"texture": ExtResource("5_7xv3y")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7xv3y")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wmo0o"]
radius = 16.25
height = 35.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_doew2"]
size = Vector2(26.5, 21.75)

[node name="DummyCharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(4, 4)
collision_layer = 128
collision_mask = 129
script = ExtResource("1_7bhiu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_pdow8")
animation = &"hurt"
frame = 4
frame_progress = 1.0

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("6_qopg8")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("8_a1bc8")

[node name="Hurt" type="Node2D" parent="StateMachine"]
script = ExtResource("9_b3bjo")

[node name="AudioStreamPlayer2D_Impact" type="AudioStreamPlayer2D" parent="StateMachine/Hurt"]
volume_db = 18.0

[node name="Freeze" type="Node2D" parent="StateMachine"]
script = ExtResource("10_6lman")

[node name="Death" type="Node2D" parent="StateMachine"]
script = ExtResource("11_44wub")

[node name="HurtBox" parent="." instance=ExtResource("7_gvkan")]
collision_layer = 5
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 5.5)
shape = SubResource("CapsuleShape2D_wmo0o")
debug_color = Color(0.191495, 0.641881, 0, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 15.125)
shape = SubResource("RectangleShape2D_doew2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = -9.0
offset_top = -30.0
offset_right = 86.0
offset_bottom = -13.0
theme_override_constants/separation = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer5" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SolfegeWheel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -3.33333
offset_right = 40.0
offset_bottom = 36.6667

[node name="Outline" type="TextureRect" parent="SolfegeWheel"]
layout_mode = 0
offset_left = -14.0
offset_top = -48.0
offset_right = 15.0
offset_bottom = -19.0
texture = ExtResource("13_nkif6")
expand_mode = 1

[node name="SolfegeContainer" type="Control" parent="SolfegeWheel" groups=["player"]]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Do" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(4, 0.15, 0.27, 1)
layout_mode = 0
offset_left = -11.0
offset_top = -45.0
offset_right = 12.0
offset_bottom = -22.0
texture = ExtResource("14_if0mq")
expand_mode = 1
script = ExtResource("15_ehgvh")

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Do"]
visible = false
layout_mode = 0
offset_left = 1.66667
offset_right = 41.6667
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Do"

[node name="Re" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(4, 0.448, 0.07, 1)
layout_mode = 0
offset_left = 22.0
offset_top = -28.0
offset_right = 45.0
offset_bottom = -5.0
texture = ExtResource("16_oiv8w")
expand_mode = 1
script = ExtResource("15_ehgvh")
solfege_ball_positions_index = 1

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Re"]
visible = false
layout_mode = 0
offset_left = 1.66667
offset_right = 41.6667
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Re"

[node name="Mi" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(4, 0.8, 0, 1)
layout_mode = 0
offset_left = 27.0
offset_right = 50.0
offset_bottom = 23.0
texture = ExtResource("17_n1vx5")
expand_mode = 1
script = ExtResource("15_ehgvh")
solfege_ball_positions_index = 2

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Mi"]
visible = false
layout_mode = 0
offset_left = 1.66667
offset_right = 41.6667
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Mi"

[node name="Fa" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(0.2, 3, 0.25, 1)
layout_mode = 0
offset_left = 7.0
offset_top = 24.0
offset_right = 30.0
offset_bottom = 47.0
texture = ExtResource("18_35kb5")
expand_mode = 1
script = ExtResource("15_ehgvh")
solfege_ball_positions_index = 3

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Fa"]
visible = false
layout_mode = 0
offset_left = 3.33333
offset_right = 43.3333
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Fa"

[node name="So" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(0.1, 0.9, 4, 1)
layout_mode = 0
offset_left = -30.0
offset_top = 24.0
offset_right = -7.0
offset_bottom = 47.0
texture = ExtResource("19_i43lu")
expand_mode = 1
script = ExtResource("15_ehgvh")
solfege_ball_positions_index = 4

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/So"]
visible = false
layout_mode = 0
offset_left = 3.33333
offset_right = 43.3333
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "So"

[node name="La" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(0.35, 0.5, 7, 1)
layout_mode = 0
offset_left = -47.0
offset_right = -24.0
offset_bottom = 23.0
texture = ExtResource("20_tmxob")
expand_mode = 1
script = ExtResource("15_ehgvh")
solfege_ball_positions_index = 5

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/La"]
visible = false
layout_mode = 0
offset_left = 3.33333
offset_right = 43.3333
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "La"

[node name="Ti" type="TextureRect" parent="SolfegeWheel/SolfegeContainer"]
self_modulate = Color(0.7, 0.3, 4, 1)
layout_mode = 0
offset_left = -42.0
offset_top = -28.0
offset_right = -19.0
offset_bottom = -5.0
texture = ExtResource("21_hajjm")
expand_mode = 1
script = ExtResource("15_ehgvh")
solfege_ball_positions_index = 6

[node name="Label" type="Label" parent="SolfegeWheel/SolfegeContainer/Ti"]
visible = false
layout_mode = 0
offset_left = 4.66666
offset_right = 44.6667
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Ti"
